<resources>
    <string name="app_name">FitnessApp</string>
    <string name="pause">Pause</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="text_1">Nutritional Harmony</string>
    <string name="text_2">start</string>
    <string name="text_3">Training</string>
    <string name="text_4">Daily comprehensive training</string>
    <string name="text_5">Nutrition</string>
    <string name="text_6">Individualized meal\nplan</string>
    <string name="text_7">Recommendations</string>
    <string name="text_8">Help with weight loss</string>
    <string name="text_9">Сontrol</string>
    <string name="text_10">Calorie calculator</string>
    <string name="text_11">Training</string>
    <string name="text_12">Warm-up:</string>
    <string name="text_13">Start with 5–10 minutes of light cardio exercise such as running in place, jumping jacks, marching to warm up your muscles and prepare your body for the workout.</string>
    <string name="text_14">Part 1: Upper Body (Arms and Back):</string>
    <string name="text_15">Push–ups: 3 approaches of 10–15 reps. You can start with knees if regular push-ups are difficult.</string>
    <string name="text_16">Pull-ups (if you have a horizontal bar or special stick): 3 approaches for the maximum number of reps, with pauses as needed.</string>
    <string name="text_17">Push–ups on the bars: 3 sets of 10–15 repetitions. If no bars are available, you can use a regular seat.</string>
    <string name="text_18">Part 2: Legs:</string>
    <string name="text_19">Squats: 3 sets of 15–20 reps. You can do regular squats or deep squats by shifting your hips back.</string>
    <string name="text_20">Lunges: 3 sets of 12 reps for each leg.</string>
    <string name="text_21">Bridge: 3 approaches of 15 reps. Lie on your back, bend your legs at the knees, and lift your pelvis up while tensing your glutes.</string>
    <string name="text_22">Part 3: Press:</string>
    <string name="text_23">Classic twists: 3 approaches for 20 reps.</string>
    <string name="text_24">Plank: Hold the plank 3 times for 30 seconds. Gradually increase the time.</string>
    <string name="text_25">Plie squats: 3 sets of 15–20 reps. Spread your feet wider than shoulder width apart, toes slightly apart.</string>
    <string name="text_26">Back Lunges with leg raises: 3 sets of 12 reps for each leg.</string>
    <string name="text_27">Part 5: Face:</string>
    <string name="text_28">Facelift Exercise: Sit up straight, place your fingers on the appropriate areas of your face (cheeks, chin), apply a little resistance as you try to lift the area of skin. Perform 3 approaches for 15 seconds for each area.</string>
    <string name="text_29">Relaxation:</string>
    <string name="text_30">End your workout with 5–10 minutes of stretching, focusing on your whole body. Remember proper exercise technique and listen to your body, avoiding pain or overexertion.</string>
    <string name="text_31">This set of exercises covers most of the body and will help maintain overall fitness. It is important to gradually increase the intensity and volume of the workout over time, as well as paying attention to proper nutrition and regular rest.</string>
    <string name="text_32">Nutrition</string>
    <string name="text_33">A personalized meal plan for weight loss should take into account your needs, goals, lifestyle and medical conditions. It is important to create a balanced plan that ensures proper nutrient intake, controls calories, and keeps you fit. Below is a general weight loss meal plan template:</string>
    <string name="text_34">Breakfast:</string>
    <string name="text_35">Omelet of two eggs with vegetables (spinach, tomatoes, mushrooms, etc.).</string>
    <string name="text_36">A serving of oatmeal on water or low-fat milk with berries and nuts.</string>
    <string name="text_37">A cup of green tea or coffee without sugar.</string>
    <string name="text_38">Morning snack:</string>
    <string name="text_39">Greek yogurt with non-fat toppings (honey, nuts, berries).</string>
    <string name="text_40">Lunch:</string>
    <string name="text_41">Grilled or baked chicken breast with spices.</string>
    <string name="text_42">A serving of quinoa or brown rice.</string>
    <string name="text_43">Fresh vegetable salad with olive oil and lemon juice.</string>
    <string name="text_44">Unsalted nuts (walnuts, almonds, pecans).</string>
    <string name="text_45">Steamed fish (salmon, cod, tilapia) with seasonings.</string>
    <string name="text_46">Steamed vegetables (broccoli, cauliflower, carrots).</string>
    <string name="text_47">Evening snack (if required):</string>
    <string name="text_48">Almond butter or olive oil for grilling half a whole wheat flour loaf.</string>
    <string name="text_49">General Recommendations:</string>
    <string name="text_50">Consume more fruits and vegetables as they are rich in vitamins, minerals and dietary fiber.</string>
    <string name="text_51">Avoid high-calorie drinks, preferring water, low-fat milk, nonfat yogurt.</string>
    <string name="text_52">Limit your intake of fast carbohydrates (sugar, sweets, white bread).</string>
    <string name="text_53">Keep portions reasonable to control the caloric intake of your meals.</string>
    <string name="text_54">Consider your individual activity and body\'s needs.</string>
    <string name="text_55">Include protein in every meal as it will help keep you satiated and maintain muscle mass.</string>
    <string name="text_56">Always consult your doctor or nutritionist before starting any diet or changing your normal eating habits. Individual needs and limitations may vary, and a professional can help tailor a meal plan based on your circumstances.</string>
    <string name="text_57">Recommendations</string>
    <string name="text_58">Weight loss progress</string>
    <string name="text_59">Losing weight is a process that requires attention to diet, physical activity and lifestyle in general. Here are a few guidelines that can help you achieve your goal:</string>
    <string name="text_60">1. Set realistic goals:</string>
    <string name="text_61">Determine how much weight you want to lose and over what period of time. Realistic goals will make the weight loss process more achievable and motivating.</string>
    <string name="text_62">2. Balance your diet:</string>
    <string name="text_63">Eat a variety of foods rich in vitamins, minerals and nutrients. Favor lean proteins, healthy fats (e.g. olive oil) and complex carbohydrates (whole grain flours, vegetables).</string>
    <string name="text_64">3. Control portions:</string>
    <string name="text_65">Keep portions moderate to avoid overeating. Use smaller eating utensils - this can help you perceive portions as more filling.</string>
    <string name="text_66">4. Have regular meals:</string>
    <string name="text_67">Eat small meals every 3–4 hours. This will help keep your blood sugar levels stable and avoid excessive feelings of hunger.</string>
    <string name="text_68">5. Water is your friend:</string>
    <string name="text_69">Drink enough water throughout the day. Water helps keep your metabolism going and reduces appetite.</string>
    <string name="text_70">6. Physical activity:</string>
    <string name="text_71">Incorporate regular exercise into your daily routine. Combine cardio (running, swimming, walking) with strength training. Physical activity helps burn calories and strengthen muscles.</string>
    <string name="text_72">7. Watch your sleep:</string>
    <string name="text_73">Proper sleep is important for metabolism and overall health. Aim for 7–9 hours of sleep per night.</string>
    <string name="text_74">8. Track your progress:</string>
    <string name="text_75">Keep a food and exercise diary to track your progress and make adjustments to your plan if necessary.</string>
    <string name="text_76">9. Avoid stress:</string>
    <string name="text_77">Stress can affect weight and appetite. Practice relaxation techniques such as yoga, meditation or walking outdoors.</string>
    <string name="text_78">10. Support and motivation:</string>
    <string name="text_79">Share your goal with loved ones or friends. They can support you during difficult moments and help you stay motivated.</string>
    <string name="text_80">11. Professional Help:</string>
    <string name="text_81">If you have medical concerns or want a customized plan, talk to a nutritionist or trainer.</string>
    <string name="text_82">Remember that weight loss is an individualized process. What works for one person may not work for another. The most important thing is to find an approach that is tailored to your personal characteristics and preferences.</string>
    <string name="text_83">Сontrol</string>
    <string name="text_84">Calorie calculator</string>
    <string name="text_85">Title</string>
    <string name="text_86">Kcal</string>
    <string name="text_87">Add</string>
    <string name="text_88">Added</string>
    <string name="part4">Part 4: Glutes:</string>
    <string name="text_5_5">Afternoon snack:</string>
    <string name="text_5_6">Apple or pear.</string>
    <string name="text_5_7">Dinner:</string>
</resources>