<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.fitness.game.core.library.CustomImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/foodTitle"
            android:layout_width="216dp"
            android:layout_height="27dp"
            android:background="@drawable/bg_choice_purple"
            android:fontFamily="@font/m400"
            android:gravity="center"
            android:text="@string/text_57"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodTitle" />

        <TextView
            android:id="@+id/f2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/m700"
            android:gravity="center"
            android:text="@string/text_58"
            android:textColor="@color/black"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/m700"
            android:text="55kg"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/foodTitle" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_59" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_60" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_61" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_62" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_63" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_64" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_65" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_66" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_67" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_68" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_69" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_70" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_71" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_72" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_73" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_74" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_75" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_76" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_77" />

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_78" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_79"/>

            <TextView
                style="@style/BoldTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_80" />

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_81"/>

            <TextView
                style="@style/ThinTextBlack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_82" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>