<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.fitness.game.core.library.CustomImageButton
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trainingTitle"
        android:layout_width="216dp"
        android:layout_height="27dp"
        android:background="@drawable/bg_choice_purple"
        android:fontFamily="@font/m400"
        android:gravity="center"
        android:text="@string/text_11"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:src="@drawable/img_training_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trainingTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_12"/>

            <TextView
                style="@style/ThinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_13"/>

            <TextView
                style="@style/BoldText"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_14"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_15"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_16"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_17"/>


            </LinearLayout>

            <TextView
                style="@style/BoldText"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_18"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_19"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_20"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_21"/>


            </LinearLayout>

            <TextView
                style="@style/BoldText"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_22"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_23"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_24"/>


            </LinearLayout>

            <TextView
                style="@style/BoldText"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/part4"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_25"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_26"/>


            </LinearLayout>

            <TextView
                style="@style/BoldText"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_27"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.  "/>

                <TextView
                    style="@style/ThinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_28"/>


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_29"/>

            </LinearLayout>

            <TextView
                style="@style/ThinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_30"/>

            <TextView
                style="@style/ThinText"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_31"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.core.widget.NestedScrollView>