<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/foreground"
        android:src="@drawable/bg_main_theme"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/keto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/m800"
        android:text="KETO"
        android:layout_margin="20dp"
        android:textColor="#8B13EA"
        android:textSize="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-17dp"
        android:fontFamily="@font/m800"
        android:text="INTERVAL"
        android:textColor="@color/black"
        android:textSize="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keto" />

    <TextView
        android:id="@+id/garmony"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/m700"
        android:text="@string/text_1"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interval" />

    <com.fitness.game.core.library.CustomButton
        android:id="@+id/start"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_main_button"
        android:fontFamily="@font/m500"
        android:gravity="center"
        android:text="@string/text_2"
        android:textAllCaps="true"
        android:layout_marginBottom="40dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        style="@style/BasicText"
        android:id="@+id/privacyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textColor="#0000FF"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>